# EmbeddedCourseDesign

./: CMakeLists.txt  README
I2C/include/: I2CControl.h  i_aux.h
I2C/src/: I2CControl.c  i_aux.c
LCD/include/: LCDControl.h  array.h  l_aux.h  paint.h
LCD/src/: LCDControl.c  array.c  l_aux.c  paint.c
UART/include/: UARTControl.h  u_aux.h
UART/src/: UARTControl.c  main.c  u_aux.c
src/: main.c
